[package]
name = "truststore"
version = "0.1.0"
authors = ["Erik Hollensbe <linux@hollensbe.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = ">=0"
anyhow = ">=0"
pathsearch = ">=0"

[dev-dependencies]
tempdir = ">=0"
openssl = ">=0"

[features]
integration = []
